fix body overflow blocking toc.follow feature

--- a/docs/stylesheets/frontpage.css
+++ b/docs/stylesheets/frontpage.css
@@ -1,6 +1,5 @@
-html, body {
+.header {
   overflow-x: hidden !important;
-  width:100%
 }
 
 .home-page {
